2005-07-04  Paul Eggert  <eggert@cs.ucla.edu>

	* Version 5.3.1.

	* src/system.h (VERIFY_W_TYPEOF): Remove; no longer needed.
	(DECIMAL_DIGIT_ACCUMULATE): Change last arg from T's maximum value
	to T itself.  All callers changed.  Check that T is unsigned, and
	that Accum is of type T.  This fixes a bug in the unlikely case
	where SIZE_MAX <= INT_MAX, and it no longer requires typeof to do
	the proper validity checks.

	* src/od.c: Adjust to verify.h change.
	* src/system.h (VERIFY_W_TYPEOF): Likewise.

2005-07-04  Jim Meyering  <jim@meyering.net>

	* src/system.h: Include "verify.h".

	* src/system.h (verify): Rename from VERIFY_EXPR, to be lower case,
	like assert.  Use sizeof, rather than equivalent ((...)0), for
	it's slightly simpler syntax.  Suggestions from Paul Eggert.
	(verify_decl): Rename from VERIFY.
	* src/od.c: Reflect name change.

2005-07-03  Jim Meyering  <jim@meyering.net>

	* NEWS: cp and mv: the --reply=X option is deprecated
	Suggested by Bob Proulx, after numerous user complaints
	about how --reply=no appeared not to work.
	* src/mv.c (main): Using --reply now evokes a warning.
	(usage): Remove description of --reply.
	* src/cp.c (main): Using --reply now evokes a warning.
	(usage): Remove description of --reply.
	* tests/mv/i-link-no: Adjust for new diagnostic.
	* tests/mv/reply-no: Likewise.

	* src/printf.c (verify_numeric): Rename from verify.
	Update caller.

2005-07-03  Paul Eggert  <eggert@cs.ucla.edu>

	* src/copy.h: Include "lstat.h" rather than rolling our own.
	* src/ls.c: Likewise.
	* src/remove.c: Likewise.

2005-07-02  Paul Eggert  <eggert@cs.ucla.edu>

	Cleanup to isolate "safer" functions to a small part of the code.
	* src/comm.c: Include stdio--.h, not stdio-safer.h.
	(compare_files): Use fopen, not fopen_safer.
	* src/copy.c: Include fcntl--.h, not unistd-safer.h.
	(copy_reg): Don't call fd_safer; no longer needed
	now that we include fcntl--.h.
	* src/csplit.c: Include fd-reopen.h.
	Include stdio--.h, not stdio-safer.h.