@@ -1,6 +1,11 @@
-2005-07-04  Paul Eggert  <eggert@cs.ucla.edu>
+2005-07-05  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* Version 5.3.1.
+
+	* src/system.h (DECIMAL_DIGIT_ACCUMULATE): Generate a hard error
+	(not just a warning) if GCC is used and the types don't match.
+
+2005-07-04  Paul Eggert  <eggert@cs.ucla.edu>
 
 	* src/system.h (VERIFY_W_TYPEOF): Remove; no longer needed.
 	(DECIMAL_DIGIT_ACCUMULATE): Change last arg from T's maximum value
